--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "jquery": "^3.3.1",
     "jquery-extendext": ">=0.1.2",
     "moment": "^2.21.0",
-    "node-sass": "^4.13.1",
-  //},
-  //"devDependencies": {
+    "node-sass": "^4.13.1"
+  },
+  "devDependencies": {
     "awesome-bootstrap-checkbox": "^0.3.7",
     "blanket": "^1.2.3",
     "bootbox": "^4.4.0",
