--- a/package.json
+++ b/package.json
@@ -16,7 +16,18 @@
     "jquery": "^3.3.1",
     "jquery-extendext": ">=0.1.2",
     "moment": "^2.21.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.13.1"
+  },
+  "devDependencies": {
+    "awesome-bootstrap-checkbox": "^0.3.7",
+    "blanket": "^1.2.3",
+    "bootbox": "^4.4.0",
+    "bootstrap-select": "^1.12.4",
+    "bootstrap-slider": "^10.0.0",
+    "bootswatch-dist": "git+https://github.com/dbtek/bootswatch-dist.git#slate",
+    "chosenjs": "^1.4.3",
+    "deepmerge": "^2.1.0",
+    "foodoc": "^0.0.8",
     "grunt": "^1.0.4",
     "grunt-banner": "^0.6.0",
     "grunt-contrib-clean": "^1.0.0",
@@ -37,18 +48,7 @@
     "grunt-sass": "^2.1.0",
     "grunt-sass-injection": "^1.0.3",
     "grunt-sass-lint": "^0.2.2",
-    "grunt-wrap": "^0.3.0"
-  },
-  "devDependencies": {
-    "awesome-bootstrap-checkbox": "^0.3.7",
-    "blanket": "^1.2.3",
-    "bootbox": "^4.4.0",
-    "bootstrap-select": "^1.12.4",
-    "bootstrap-slider": "^10.0.0",
-    "bootswatch-dist": "git+https://github.com/dbtek/bootswatch-dist.git#slate",
-    "chosenjs": "^1.4.3",
-    "deepmerge": "^2.1.0",
-    "foodoc": "^0.0.8",
+    "grunt-wrap": "^0.3.0",
     "interactjs": "^1.3.3",
     "jit-grunt": "^0.10.0",
     "qunit": "^2.5.1",
