--- a/package.json
+++ b/package.json
@@ -16,7 +16,28 @@
     "jquery": "^3.3.1",
     "jquery-extendext": ">=0.1.2",
     "moment": "^2.21.0",
-    "node-sass": "^4.13.1"
+    "node-sass": "^4.13.1",
+    "grunt": "^1.0.4",
+    "grunt-banner": "^0.6.0",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-concat": "^1.0.0",
+    "grunt-contrib-connect": "^1.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^2.2.1",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-qunit": "^2.0.0",
+    "grunt-contrib-uglify": "3.4.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-coveralls": "^1.0.0",
+    "grunt-injector": "^1.1.0",
+    "grunt-jscs": "^3.0.1",
+    "grunt-jsdoc": "^2.2.1",
+    "grunt-open": "^0.2.3",
+    "grunt-qunit-blanket-lcov": "^1.0.0",
+    "grunt-sass": "^2.1.0",
+    "grunt-sass-injection": "^1.0.3",
+    "grunt-sass-lint": "^0.2.2",
+    "grunt-wrap": "^0.3.0"
   },
   "devDependencies": {
     "awesome-bootstrap-checkbox": "^0.3.7",
@@ -28,27 +49,6 @@
     "chosenjs": "^1.4.3",
     "deepmerge": "^2.1.0",
     "foodoc": "^0.0.8",
-    "grunt": "^1.0.4",
-    "grunt-banner": "^0.6.0",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-concat": "^1.0.0",
-    "grunt-contrib-connect": "^1.0.0",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "^2.2.1",
-    "grunt-contrib-jshint": "^1.0.0",
-    "grunt-contrib-qunit": "^2.0.0",
-    "grunt-contrib-uglify": "^3.3.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-coveralls": "^1.0.0",
-    "grunt-injector": "^1.1.0",
-    "grunt-jscs": "^3.0.1",
-    "grunt-jsdoc": "^2.2.1",
-    "grunt-open": "^0.2.3",
-    "grunt-qunit-blanket-lcov": "^1.0.0",
-    "grunt-sass": "^2.1.0",
-    "grunt-sass-injection": "^1.0.3",
-    "grunt-sass-lint": "^0.2.2",
-    "grunt-wrap": "^0.3.0",
     "interactjs": "^1.3.3",
     "jit-grunt": "^0.10.0",
     "qunit": "^2.5.1",
@@ -70,6 +70,9 @@
   },
   "bugs": {
     "url": "https://github.com/mistic100/jQuery-QueryBuilder/issues"
+  },
+  "engines": {
+    "node": "13.x"
   },
   "scripts": {
     "serve": "grunt serve",
