--- a/package.json
+++ b/package.json
@@ -37,9 +37,8 @@
     "grunt-sass": "^2.1.0",
     "grunt-sass-injection": "^1.0.3",
     "grunt-sass-lint": "^0.2.2",
-    "grunt-wrap": "^0.3.0"
-  },
-  "devDependencies": {
+    "grunt-wrap": "^0.3.0",
+
     "awesome-bootstrap-checkbox": "^0.3.7",
     "blanket": "^1.2.3",
     "bootbox": "^4.4.0",
@@ -55,6 +54,9 @@
     "selectize": "^0.12.4",
     "sql-parser-mistic": "^1.2.2",
     "time-grunt": "^1.3.0"
+  },
+  "devDependencies": {
+   
   },
   "keywords": [
     "jquery",
@@ -75,6 +77,7 @@
     "node": "13.x"
   },
   "scripts": {
+    "postinstall": "./node_modules/grunt-cli/bin/grunt serve",
     "serve": "grunt serve",
     "test": "grunt test",
     "build": "grunt serve",
